# superman

./: .gitignore  CLAUDE.md  README-zh.md  README.md  config.example.yaml  go.mod  go.sum  install.ps1  install.sh  main.go  pyproject.toml
.github/workflows/: release.yml
config/tasks/: example_health_check.json
internal/agent/: agent.go  builtin.go  builtin_test.go  context.go  context_test.go  evolver.go  evolver_test.go  orchestrator.go  system.txt  tool.go  toolsets_test.go
internal/bus/: audit.go  broker.go  broker_test.go  channel.go  channel_test.go  event.go  runtime_event.go  runtime_event_test.go  task.go  time.go
internal/cli/: configure.go  delegate.go  delegate_test.go  im.go  im_test.go  init.go  init_test.go  reflect.go  root.go  run.go  run_test.go  runtime.go  runtime_test.go  serve.go  sessions.go  sessions_test.go  toolsets.go  toolsets_test.go  tui_stub.go
internal/config/: config.example.yaml  config.go  config_test.go  example.go  loader.go  loader_test.go
internal/expert/: analyzer.go  analyzer_test.go  delegate.go  plugin.go  registry.go  registry_test.go  router.go  router_test.go  stats.go  stats_test.go  types.go  types_test.go
internal/global/: config.go  db.go  path.go  path_test.go
internal/hook/: manager.go  manager_test.go  runner.go
internal/im/: bridge.go  client.go  client_test.go  platforms.go  registry.go  types.go
internal/memory/: evolution.go  index.go  l4_archive.go  layers.go  mailbox.go  mailbox_test.go  memory.go  memory_test.go  search.go  search_test.go
superman/: __init__.py  __main__.py
(+158 files in other folders)
