[project]
name = "superman-agent"
version = "0.1.0"
description = "A general-purpose AI agent"
requires-python = ">=3.11"
authors = [
    {name = "cv70"}
]

dependencies = [
    "typer>=0.12.0",
    "rich>=15.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "prompt-toolkit>=3.0.0",
    "langchain>=1.2.18",
    "langchain-core>=1.4.0",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
web = [
    "duckduckgo_search>=6.0.0",
    "readability-lxml>=0.8.0",
    "httpx>=0.28.0",
]

[project.scripts]
superman = "superman.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["superman/**/*.py", "superman/templates/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = ["ruff>=0.6.0"]